<resources>
    <string name="app_name">Clocking System</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="TimeIn">Clock IN</string>
    <string name="TimeOut">Clock OUT</string>
    <string name="calculateHours">Calculate Hours</string>
    <string name="viewShifts">My Shifts</string>
    <string name="deleteShifts">Delete All Shifts</string>
    <string name="deleteAccount">Delete My Account</string>
    <string name="Settings">Settings</string>
    <string name="Register">Register</string>
    <string name="LoginMessage">Login</string>
    <string name="Submit">Submit</string>
</resources>